integrated theme styles and images; ported layout, header and footer to new skin

--- a/app/stylesheets/partials/_footer.sass
+++ b/app/stylesheets/partials/_footer.sass
@@ -1,10 +1,18 @@
-body.bp
-  #ft
-    +container
-    :font-size 85%
-    :text-align center
-    :color #555
-    :padding 1em 0
-    p
-      :margin 0
-      :line-height 1.6em
+div.footer
+  width: 790px
+  margin: 5px auto
+  clear: both
+
+  p
+    position: relative
+    font-size: 12px
+    color: rgb(60,60,60)
+    margin: 0px
+    padding: 0px
+    text-align: center
+  a
+    font-size: 12px
+    color: rgb(60,60,60)
+
+    &:hover
+      color: rgb(255,255,255)
