skinned results index

--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -1,4 +1,8 @@
+@import blueprint/reset.sass
 @import compass/utilities.sass
-@import partials/reset.sass
+@import partials/general.sass
 @import partials/header.sass
 @import partials/footer.sass
+@import partials/flash.sass
+@import partials/pagination.sass
+@import partials/results.sass
