--- a/app/views/brand_results/_brand_result.html.haml
+++ b/app/views/brand_results/_brand_result.html.haml
@@ -1,9 +1,10 @@
 %tr
-  %td.source
-    %a{:href => brand_result.result.url, :class => brand_result.result.source, :title => brand_result.result.source}
-      = h brand_result.result.source
+  %td
+    %a{:href => brand_result.result.url, :title => brand_result.result.source}
+      %img{:src => "/images/#{brand_result.result.source}.png", :alt => brand_result.result.source }
+      
   %td.body
     %div
       = sanitize brand_result.result.body
     = brand_result.action_links.join(" | ")
-  %td.created_at= brand_result.result.created_at.to_s(:short)
+  %td.nowrap= brand_result.result.created_at.to_s(:short)
