--- a/app/stylesheets/partials/_tools.sass
+++ b/app/stylesheets/partials/_tools.sass
@@ -18,6 +18,9 @@
 .center
   :text-align center
 
+.nowrap
+  +nowrap
+
 =rounded(!radius = 5px)
   :border-radius = !radius
   :-moz-border-radius = !radius
@@ -38,11 +41,6 @@
   :border-bottom-right-radius = !radius
   :-moz-border-radius-bottomright = !radius
   :-webkit-border-bottom-right-radius = !radius
-
-=inset-border-shadow(!radius = 10px)
-  :-moz-box-shadow= "inset" 0 0 !radius #CCC
-  :-webkit-box-shadow= "inset" 0 0 !radius #CCC
-  :box-shadow= "inset" 0 0 !radius #CCC
 
 =inner
   :background-color #FFF
