--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -1,4 +1,5 @@
 @import blueprint/reset.sass
+@import blueprint
 @import compass/utilities.sass
 @import partials/general.sass
 @import partials/header.sass
@@ -6,3 +7,6 @@
 @import partials/flash.sass
 @import partials/pagination.sass
 @import partials/results.sass
+@import partials/team.sass
+@import partials/formtastic_base.sass
+@import partials/forms.sass
