--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,6 +1,6 @@
-.inner
-  %h3 Create a new user
-  
+- title "Create a new user"
+
+.content
   - semantic_form_for @user do |f|
     - f.inputs do
       = f.input :login
