--- a/app/stylesheets/partials/_flash.sass
+++ b/app/stylesheets/partials/_flash.sass
@@ -6,7 +6,9 @@
   :border
     :style solid none
     :width 2px
-  :font-weight bold
+  :font
+    :weight bold
+    :size 14px
   &#error
     :background #C00 url(/images/exclamation.png) no-repeat scroll 6px 50%
     :border-color #C99
