--- a/app/views/teams/show.html.haml
+++ b/app/views/teams/show.html.haml
@@ -1,13 +1,9 @@
-.inner
-  %h3 Team members
-  - if current_user.account_holder?
-    = link_to "Add a new member", new_user_path, :class => "add"
-  %table#members.index
-    %thead
-      %tr
-        %th User
-        %th Email
-        %th &nbsp;
-    %tbody
-      - @team.members.each do |member|
-        = render "member", :object => present_user(member)
+- title "Team members"
+
+- if current_user.account_holder?
+  .buttons
+    = link_to "Create a new user", new_user_path, :class => "add new_user"
+
+.users
+  - @team.members.each do |member|
+    = render "member", :object => present_user(member)
