--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -6,6 +6,7 @@
 @import partials/footer.sass
 @import partials/flash.sass
 @import partials/pagination.sass
+@import partials/login.sass
 @import partials/results.sass
 @import partials/team.sass
 @import partials/formtastic_base.sass
