--- a/app/views/accounts/new.html.haml
+++ b/app/views/accounts/new.html.haml
@@ -1,7 +1,7 @@
-.inner
-  %h3 Register for an account
-  
-  - semantic_form_for @account, :url => account_path do |f|
+- title "Register for an account"
+
+.content
+  - semantic_form_for @account, :url => account_path, :html => { :class => "account" } do |f|
     = f.hidden_field :invitation_id
     = f.error_message_on :invitation_id
     - f.fields_for :holder do |holder_form|
