--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -18,12 +18,10 @@
         %li.right_side
           = link_to "Sign out", user_session_path, :method => 'delete'
         - if current_user.invitation_limit > 0
-          %li.right_side
+          %li.right_side{:class => active("invitation") ? "active" : nil}
             = link_to "Invite friends (#{current_user.invitation_limit} left)", new_invitation_path
         %li.right_side
           = link_to "My info", edit_user_path(current_user)
         - if current_user.account_holder?
           %li.right_side{:class => active("account") ? "active" : nil}
             = link_to "My account", edit_account_path
-      - else
-        %li= link_to "Login", new_user_session_path
