--- a/app/stylesheets/partials/_general.sass
+++ b/app/stylesheets/partials/_general.sass
@@ -119,11 +119,17 @@ div
       height: 24px
       text-indent: -9999px
       outline: none
-      &.new_user
-        background: url('/images/new_user_button.jpg')
-        &:hover
-          background: url('/images/new_user_button_hover.jpg')
 
+    .back
+      display: block
+      float: right
+      width: 100px
+      height: 24px
+      text-align: right
+      &:hover
+        background-color: transparent
+        color: rgb(0,0,255)
+      
 table.index
   :width 100%
   :font normal 12px  Arial, Tahoma, Verdana,  sans-serif
