--- a/app/stylesheets/_initial_theme.sass
+++ b/app/stylesheets/_initial_theme.sass
@@ -1,3 +1,160 @@
+html
+  margin: 0px
+  padding: 0px
+
+
+body
+  margin: 0px
+  padding: 0px
+  font-family: Verdana, Arial, sans-serif
+  background: rgb(146,146,146)
+
+
+h1, h2, h3, h4
+  font-family: 'Lucida Grande', Verdana, Arial, sans-serif
+  color: rgb(0,0,0)
+  margin: 0px
+
+
+h2
+  font-size: 14px
+  margin: 0px
+  margin-top: 10px
+  padding-bottom: 4px
+
+
+h3
+  font-size: 13px
+  padding: 10px
+  margin: 0px
+
+
+p
+  font: normal 12px  Arial, Tahoma, Verdana,  sans-serif
+  margin: 0px
+  line-height: 1.4em
+
+
+a
+  color: rgb(0,0,255)
+
+  &:hover
+    color: rgb(255,255,255)
+    background: rgb(0,0,255)
+    text-decoration: none
+
+
+img
+  margin: 0px
+  border: 0px
+
+
+br
+  clear: both
+
+
+div
+  &.header
+    background: rgb(30,30,30)
+    border-bottom: solid 1px rgb(0,0,0)
+    margin: 0px
+    padding: 10px 20px
+
+    h1
+      display: block
+      font-size: 17px
+      font-weight: normal
+      color: rgb(225,225,225)
+      width: 790px
+      margin: 0px auto
+      padding: 0px
+
+  &.navigation_wrap
+    border-top: solid 1px rgb(200,200,200)
+
+  &.navigation
+    width: 790px
+    height: 30px
+    margin: 0px auto
+    margin-top: 5px
+    padding: 0px
+
+    ul
+      margin: 0px
+      padding: 0px
+
+    li
+      display: block
+      float: left
+      background: url(../images/navigation_li_bg.jpg) no-repeat right top
+      list-style: none
+      margin: 0px
+      margin-right: 4px
+      padding: 0px
+
+    a
+      display: block
+      float: left
+      font-size: 11px
+      background: url(../images/navigation_a_bg.jpg) no-repeat left top
+      color: rgb(255,255,255)
+      height: 16px
+      text-decoration: none
+      margin: 0px
+      padding: 4px 12px
+
+      &:hover
+        color: rgb(255,255,0)
+
+    li
+      &.active
+        background: url(../images/navigation_li_active_bg.jpg) no-repeat right top
+
+        a
+          background: url(../images/navigation_a_active_bg.jpg) no-repeat left top
+
+      &.right_side
+        float: right
+        margin-right: 0px
+        margin-left: 4px
+
+    a.user_start
+      margin-left: 10px
+
+  &.content_wrap
+    width: 790px
+    margin: 0px auto
+    background: rgb(255,255,255)
+
+    div.heading
+      background: rgb(228,241,246)
+      color: rgb(160,160,160)
+      border-bottom: solid 1px rgb(170,184,190)
+      margin: 0px
+      padding: 10px
+      padding-bottom: 5px
+
+      h2
+        font-size: 14px
+        margin: 0px
+
+      div.actions
+        float: right
+        font-size: 12px
+
+        a
+          font-size: 11px
+          padding: 2px 4px
+
+          &.active
+            color: rgb(255,255,255)
+            background: rgb(0,0,255)
+            text-decoration: none
+
+  &.content
+    font-size: 14px
+    padding: 10px
+    clear: both
 
   &.buttons
     padding: 10px
@@ -171,6 +328,10 @@
       &.submit
         padding-top: 10px
         clear: both
+
+  &.column
+    float: right
+    width: 160px
 
   &.mini_calander
     width: 100%
@@ -659,6 +820,24 @@ div
           width: 100%
           border: solid 1px rgb(160,160,160)
 
+  &.footer
+    width: 790px
+    margin: 5px auto
+    clear: both
+
+    p
+      position: relative
+      font-size: 12px
+      color: rgb(60,60,60)
+      margin: 0px
+      padding: 0px
+
+    a
+      font-size: 12px
+      color: rgb(60,60,60)
+
+      &:hover
+        color: rgb(255,255,255)
 
   &.login
     div.content_wrap
