--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,9 +3,8 @@
   %head
     %title Brandizzle    
     = stylesheet_link_tag 'compiled/screen.css', :media => 'screen, projection'
-    =# stylesheet_link_tag 'compiled/print.css', :media => 'print'
     /[if lte IE 8]
-      =# stylesheet_link_tag 'compiled/ie.css', :media => 'screen, projection'
+      = stylesheet_link_tag 'compiled/ie.css', :media => 'screen, projection'
     
     = javascript_include_tag 'jquery-1.4.1', 'application'
     = yield :head
