layout fixes: account links moved to top header; pagination links; fixed features

--- a/app/stylesheets/partials/_login.sass
+++ b/app/stylesheets/partials/_login.sass
@@ -2,5 +2,7 @@ div
   &.login
     .main-content
       :min-height 100px
-    .content_wrap, .footer, .navigation
+    .header .top, .content_wrap, .footer, .navigation
       :width 700px
+    .header
+      :margin-bottom 20px
