--- a/app/stylesheets/partials/_header.sass
+++ b/app/stylesheets/partials/_header.sass
@@ -4,22 +4,45 @@ div
     border-bottom: solid 1px rgb(0,0,0)
     margin: 0px
     padding: 10px 20px
-
-    h1
-      display: block
-      font-size: 17px
-      font-weight: normal
-      color: rgb(225,225,225)
-      width: 980px
-      margin: 0px auto
-      padding: 0px
-      a
-        color: rgb(225,225,225)
-        text-decoration: none
-        &:hover
+    .top
+      +clearfix
+      :width 980px
+      :margin 0px auto
+      :padding 0px
+      h1
+        display: block
+        font-size: 17px
+        font-weight: normal
+        :color #FFFFFF
+        :float left
+        a
           color: rgb(225,225,225)
-          background: transparent
-          
+          text-decoration: none
+          &:hover
+            color: rgb(225,225,225)
+            background: transparent
+
+      .account-links
+        :float right
+        ul
+          +horizontal-list
+          li
+            :font
+              :size 13px
+              :weight normal
+            :color #FFFFFF
+            a
+              :border-left 1px solid #FFF
+              :color #FFFFFF
+              +hover-link
+              :font
+                :size 13px
+                :weight normal
+              :padding-left 7px
+              :display block
+              :outline none
+              &:hover
+                :background-color transparent
 
   &.navigation_wrap
     border-top: solid 1px rgb(200,200,200)
