--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,7 +1,18 @@
 .header
-  %h1
-    %span
-      = link_to 'Brandizzle', brand_results_path
+  .top
+    %h1
+      %span
+        = link_to 'Brandizzle', brand_results_path
+    .account-links
+      - if current_user
+        %ul
+          %li= "Welcome #{current_user}"
+          - if current_user.account_holder?
+            %li= link_to "My account", edit_account_path
+          %li= link_to "My info", edit_user_path(current_user)
+          - if current_user.invitation_limit > 0
+            %li= link_to "Invite friends (#{current_user.invitation_limit} left)", new_invitation_path
+          %li= link_to "Sign out", user_session_path, :method => 'delete'
 .navigation_wrap
   .navigation
     %ul
@@ -15,13 +26,3 @@
         %li{:class => active("team") ? "active" : nil}
           = link_to "Team", team_path
         %li= link_to "Search", "#"
-        %li.right_side
-          = link_to "Sign out", user_session_path, :method => 'delete'
-        - if current_user.invitation_limit > 0
-          %li.right_side{:class => active("invitation") ? "active" : nil}
-            = link_to "Invite friends (#{current_user.invitation_limit} left)", new_invitation_path
-        %li.right_side
-          = link_to "My info", edit_user_path(current_user)
-        - if current_user.account_holder?
-          %li.right_side{:class => active("account") ? "active" : nil}
-            = link_to "My account", edit_account_path
