added aasm for brand_results (changes follow_up); added actions to control the brand_results; organized link and filter helpers; specs; features

--- a/app/stylesheets/partials/_results.sass
+++ b/app/stylesheets/partials/_results.sass
@@ -22,11 +22,14 @@ div
       .status
         :font-size 11px
         span
+          :color #FFFFFF
+          :font-weight normal
+          :padding 1px 5px
           &.follow_up
-            color: rgb(255,255,255)
-            background: rgb(255,100,100)
-            font-weight: normal
-            padding: 1px 5px
+            :background rgb(255,100,100)
+          &.done
+            :background #0000FF
+
   #entries
     :font
       :weight bold
