--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,6 +15,7 @@
         .content_wrap
           - if show_title?
             .heading
+              = yield :heading
               %h2= h yield(:title)
           = render :partial => "shared/flash", :object => flash
           .main-content
