upgraded pickle gem; updated brand_results features (fixed the failing ones); features for managing brand_results (follow_up, reject etc)

--- a/app/views/brand_results/_brand_result.html.haml
+++ b/app/views/brand_results/_brand_result.html.haml
@@ -1,4 +1,4 @@
-%div.result
+%div.result{ :id => brand_result.dom_id}
   %p.status
     = brand_result.result.created_at.strftime("%I:%M%p")
     = brand_result.status
