--- a/app/views/brand_results/_brand_result.html.haml
+++ b/app/views/brand_results/_brand_result.html.haml
@@ -4,6 +4,7 @@
     = brand_result.status
   %p.body
     %img{:src => "/images/#{brand_result.result.source}.png", :alt => brand_result.result.source }
-    = sanitize brand_result.result.body
+    = auto_link(sanitize(brand_result.result.body), :urls, :html => { :target => '_blank'})
   %p.leenks
     = brand_result.action_links.join(" | ")
+    
