added date-picker for filtering result by date_range

--- a/app/stylesheets/partials/_general.sass
+++ b/app/stylesheets/partials/_general.sass
@@ -100,6 +100,10 @@ div
           &.active
             color: rgb(255,255,255)
             background: rgb(0,0,255)
+    form
+      :margin 10px 0 10px 10px
+      input
+        :margin 3px 0
     a
       +hover-link
     
