finished integrating date-picker; cleaned up unnecessary code and files; specs; features;

--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -4,6 +4,7 @@
 @import partials/general.sass
 @import partials/header.sass
 @import partials/footer.sass
+@import partials/sidebar.sass
 @import partials/flash.sass
 @import partials/pagination.sass
 @import partials/static.sass
@@ -13,3 +14,5 @@
 @import partials/team.sass
 @import partials/formtastic_base.sass
 @import partials/forms.sass
+@import partials/date-picker/jquery-ui-1.8.sass
+@import partials/date-picker/date-picker.sass
