removed access for account holder to updating team members information (because we don't want the account holder to modify the twitter credentials or password, or other sensitive info) Account holder can only create/remove and enable/disable users.

--- a/app/stylesheets/partials/_forms.sass
+++ b/app/stylesheets/partials/_forms.sass
@@ -13,10 +13,14 @@ form.formtastic
           display: block
         &.string, &.password
           input
-            font-size: 28px
             border: solid 1px rgb(160,160,160)
         &.error
           +error
+  &.large
+    fieldset ol li
+      &.string, &.password
+        input
+          font-size: 28px
   &.account
     +stack-form("455px", "auto", "0", "right")
     fieldset ol li
