--- a/app/views/invitations/new.html.haml
+++ b/app/views/invitations/new.html.haml
@@ -1,7 +1,7 @@
 - title "Invite your friends"
 
 .content
-  - semantic_form_for @invitation do |f|
+  - semantic_form_for @invitation, :html => { :class => "large" } do |f|
     - f.inputs  do
       = f.input :recipient_email, :label => "Friend's email address"
     - f.buttons do
