--- a/app/views/password_resets/edit.html.haml
+++ b/app/views/password_resets/edit.html.haml
@@ -1,7 +1,7 @@
 - title "Reset Your Password"
   
 .content
-  - semantic_form_for @user, :url => password_reset_path(:id => @user.perishable_token), :html => { :class => "account" } do |f|
+  - semantic_form_for @user, :url => password_reset_path(:id => @user.perishable_token), :html => { :class => "account large" } do |f|
     - f.inputs do
       = f.input :password
       = f.input :password_confirmation
