--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -9,7 +9,7 @@
           %li= "Welcome #{current_user}"
           - if current_user.account_holder?
             %li= link_to "My account", edit_account_path
-          %li= link_to "My info", edit_user_path(current_user)
+          %li= link_to "My info", edit_user_info_path
           - if current_user.invitation_limit > 0
             %li= link_to "Invite friends (#{current_user.invitation_limit} left)", new_invitation_path
           %li= link_to "Sign out", user_session_path, :method => 'delete'
