moved source image from the body of result to status (on brand results index)

--- a/app/stylesheets/partials/_results.sass
+++ b/app/stylesheets/partials/_results.sass
@@ -21,6 +21,7 @@ div
         :font-size 11px
       .status
         :font-size 11px
+        :padding-left 20px
         span
           :color #FFFFFF
           :font-weight normal
