ajax for updating results (follow up, done, reject)

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,7 +6,7 @@
     /[if lte IE 8]
       = stylesheet_link_tag 'compiled/ie.css', :media => 'screen, projection'
     
-    = javascript_include_tag 'jquery-1.4.2.min', 'jquery-ui-1.8.custom.min', 'daterangepicker.jQuery', 'application'
+    = javascript_include_tag 'jquery-1.4.2.min', 'jquery-ui-1.8.custom.min', 'jquery-rails', 'daterangepicker.jQuery', 'application'
     = yield :head
   %body
     .container
